--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: ChIPDBData
 Title: ChIP-seq Target Databases for TFEA.ChIP
-Version: 0.99.2
-Authors@R: c(person(given = "Yosra", family = "Berrouayel", email = "yosraberrouayel@gmail.com", role = c("aut", "cre"), comment = c(ORCID = "0000-0002-0768-5933")),
+Version: 0.99.3
+Authors@R: c(person(given = "Yosra", family = "Berrouayel", email = "yberrouayel@iib.uam.es", role = c("aut", "cre"), comment = c(ORCID = "0000-0002-0768-5933")),
 	     person(given = "Luis", family = "del Peso", email = "lpeso@iib.uam.es", role = c("aut"), comment = c(ORCID = "0000-0003-4014-5688")))
 Description: Provides curated gene target databases derived from ChIP-seq datasets, formatted as ChIPDB objects for use with TFEA.ChIP.
 License: GPL-3
