--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,18 @@
 Package: ChIPDBData
 Title: ChIP-seq Target Databases for TFEA.ChIP
-Version: 0.99.3
+Version: 0.99.4
 Authors@R: c(person(given = "Yosra", family = "Berrouayel", email = "yosraberrouayel@gmail.com", role = c("aut", "cre"), comment = c(ORCID = "0000-0002-0768-5933")),
 	     person(given = "Luis", family = "del Peso", email = "lpeso@iib.uam.es", role = c("aut"), comment = c(ORCID = "0000-0003-4014-5688")))
 Description: Provides curated gene target databases derived from ChIP-seq datasets, formatted as ChIPDB objects for use with TFEA.ChIP.
 License: GPL-3
 Imports:
-    ExperimentHub,
-    AnnotationHub,
-    TFEA.ChIP
+    ExperimentHub
 Suggests: 
     knitr,
-    rmarkdown
+    rmarkdown,
+    BiocStyle,
+    AnnotationHub,
+    TFEA.ChIP
 biocViews: ExperimentData, ExperimentHub, Homo_sapiens_Data, ENCODE, SequencingData
 VignetteEngine: knitr::rmarkdown
 VignetteBuilder: knitr
