--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: ChIPDBData
 Title: ChIP-seq Target Databases for TFEA.ChIP
-Version: 0.99.4
+Version: 0.99.5
 Authors@R: c(person(given = "Yosra", family = "Berrouayel", email = "yosraberrouayel@gmail.com", role = c("aut", "cre"), comment = c(ORCID = "0000-0002-0768-5933")),
 	     person(given = "Luis", family = "del Peso", email = "lpeso@iib.uam.es", role = c("aut"), comment = c(ORCID = "0000-0003-4014-5688")))
 Description: Provides curated gene target databases derived from ChIP-seq datasets, formatted as ChIPDB objects for use with TFEA.ChIP.
@@ -12,7 +12,8 @@ Suggests:
     rmarkdown,
     BiocStyle,
     AnnotationHub,
-    TFEA.ChIP
+    TFEA.ChIP,
+    testthat (>= 3.0.0)
 biocViews: ExperimentData, ExperimentHub, Homo_sapiens_Data, ENCODE, SequencingData
 VignetteEngine: knitr::rmarkdown
 VignetteBuilder: knitr
@@ -21,3 +22,4 @@ BugReports: https://github.com/yberda/ChIPDBData/issues
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
+Config/testthat/edition: 3
